<?xml version="1.0" encoding="utf-8"?>
<!--
 ! Excerpted from "Programming Sound with Pure Data",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/thsound for more book information.
-->
<resources>
	<string name="pref_title">Pure Data Preferences</string>
	<string name="pref_sum">Pure Data Preferences</string>
	<string name="pref_key_srate">SAMPLE_RATE</string>
	<string name="pref_title_srate">Sample rate</string>
	<string name="pref_sum_srate">Sample rate for Pure Data</string>
	<string name="pref_key_inchannels">INPUT_CHANNELS</string>
	<string name="pref_title_inchannels">Input channels</string>
	<string name="pref_sum_inchannels">Number of input channels</string>
	<string name="pref_key_outchannels">OUTPUT_CHANNELS</string>
	<string name="pref_title_outchannels">Output channels</string>
	<string name="pref_sum_outchannels">Number of output channels</string>
</resources>
